tests/tests/ui-unstable/no-arguments.stderr
error: proc macro panicked
  --> $DIR/no-arguments.rs:15:5
   |
15 |     indoc!();
   |     ^^^^^^^^^
   |
   = help: message: argument must be a single string literal, but got 0 tokens

error: aborting due to previous error

